results/SpecGenBench/2-shot/log-UglyNum-2023_11_06_14_58_29.txt
class UglyNum {
    //@ ensures \result == true <==> n > 0 && (\forall int i; 0 <= i && i < factors.length; n % factors[i] == 0);
    public static boolean isUgly(int n) {
        if (n <= 0) {
            return false;
        }
        int[] factors = {2, 3, 5};
        //@ maintaining (\forall int i; 0 <= i && i < factors.length; n % factors[i] == 0);
        //@ decreases n;
        for (int i = 0; i < factors.length; i++) {
            int factor = factors[i];
            while (n % factor == 0) {
                n /= factor;
            }
        }
        return n == 1;
    }
}
/home/max/Documents/JMLGPT/tmp/UglyNum.java:2: error: cannot find symbol
    //@ ensures \result == true <==> n > 0 && (\forall int i; 0 <= i && i < factors.length; n % factors[i] == 0);
                                                                            ^
  symbol:   variable factors
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:2: error: cannot find symbol
    //@ ensures \result == true <==> n > 0 && (\forall int i; 0 <= i && i < factors.length; n % factors[i] == 0);
                                                                                                ^
  symbol:   variable factors
  location: class UglyNum
/home/max/Documents/JMLGPT/tmp/UglyNum.java:8: error: variable i is already defined in method isUgly(int)
        //@ maintaining (\forall int i; 0 <= i && i < factors.length; n % factors[i] == 0);
                                     ^
3 errors

